# pyxrotor

./: readme.md  setup.cfg
pyxrotor/: __init__.py  pyxrotor.py  xrotrec.py
