[metadata]
name = pyxrotor
version = 0.0.1
author = rtfcv
author_email = author@example.com
description = wrapper for xrotor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rtfcv/pyxrotor
project_urls =
    Bug Tracker = https://github.com/rtfcv/pyxrotor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =

[options.entry_points]
console_scripts =
    xrotrec=pyxrotor.xrotrec:xrotrec_main
